--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<title>asik baru</title>
+<title>Fadhilx Site</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="color-scheme" content="light only">
-<meta name="description" content="heheyy">
+<meta name="description" content="Hai">
 <meta property="og:site_name" content="Fadhilx Site">
 <meta property="og:title" content="Fadhilx Site">
 <meta property="og:type" content="website">
 <meta property="og:description" content="Hai">
-<meta property="og:image" content="https://yourdomain.cok/assets/images/card.jpg?">
+<meta property="og:image" content="https://#">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:image:width" content="1280">
 <meta property="og:image:height" content="800">
-<meta property="og:url" content="https://yourdomain.cok">
+<meta property="og:url" content="https://#">
 <meta property="twitter:card" content="summary_large_image">
-<link rel="canonical" href="https://yourdomain.cok">
+<link rel="canonical" href="https://#">
 <link href="https://fonts.googleapis.com/css2?display=swap&amp;family=Playfair+Display:ital,wght@0,400;1,400&amp;family=Inter:ital,wght@0,400;1,400" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="style.css">
 <script src="noscript.js"></script>
