Update ver galau

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 			<h1 id="text01"><span class="p">Rian<br>
 			<em>Fadhil</em></span></h1>
 			<p id="text03">
-				<em>Secretly and unknowingly</em> admiring her is the highest point of love
+				The imagination of a <em>we</em> that comes after regret, that's what I fear the most.
+				<!--<em>Secretly and unknowingly</em> admiring her is the highest point of love-->
 			</p>
 			<ul id="icons01" class="icons">
 				<li>
